--- a/index.html
+++ b/index.html
@@ -1378,12 +1378,26 @@
                     <br>UCLA</p>
             </div>
             <div class="large-1 columns">
+                <a href="https://jingdongwang2017.github.io/"><img src="./static/eccv2022/img/WangJingdong.jpeg" class="home_team_picture style=" width="75" height="75" ;>
+                    <br><br>
+                </a>
+                <p style="font-size:12px; font-weight: 200;">Jingdong Wang
+                    <br>Baidu</p>
+            </div>  
+            <div class="large-1 columns">
+                <a href="https://pages.ucsd.edu/~ztu/"><img src="./static/eccv2022/img/ztu_09.jpeg" class="home_team_picture style=" width="75" height="75" ;>
+                    <br><br>
+                </a>
+                <p style="font-size:12px; font-weight: 200;">Zhuowen Tu
+                    <br>UCSD</p>
+            </div>  
+            <div class="large-1 columns">
                 <a href="https://www.microsoft.com/en-us/research/people/jfgao/"><img src="https://www.microsoft.com/en-us/research/uploads/prod/2020/09/20191101_170350330_iOS-4.jpg" class="home_team_picture style=" width="75" height="75" ;>
                     <br><br>
                 </a>
                 <p style="font-size:12px; font-weight: 200;">Jianfeng Gao
                     <br>Microsoft</p>
-            </div>                       
+            </div>                                               
             <hr>
         </div>
     </div>
