icinw link added

--- a/index.html
+++ b/index.html
@@ -263,23 +263,29 @@
                             <td width=100>
                                 <center> <span style="color:gray;"><b>Eval Datasets</b></span> <br>
                             </td>
-                            <td width=200>
+                            <td width=100>
                                 <center> <span style="color:gray;"><b>Eval Metrics</b></span> <br>
                             </td>
+                            <td width=150>
+                                <center> <span style="color:gray;"><b>Make a Submission</b></span> <br>
+                            </td>                            
                             <!-- <td width=150>
                                 <center> <span style="color:gray;"><b>Pretraining data*</b></span> <br>
                             </td> -->
                         </tr>
                         <tr>
-                            <td width=150>
+                            <td width=100>
                                 <center> <span><b>ICinW</b></span></center>
                             </td>
                             <td width=150>
                                 <center> <span><b>20 Image Classification Datasets</b></span></center>
                             </td>
-                            <td width=150>
-                                <center> <span><b>Averaged scores in zero, few, full-shot settings</b></span></center>
+                            <td width=100>
+                                <center> <span><b>Zero, few, full-shot</b></span></center>
                             </td>
+                            <td width=150>
+                                <center> <span><a href="https://eval.ai/web/challenges/challenge-page/1832/overview"> <img src="https://evalai.s3.amazonaws.com/media/logos/0edb5d9a-27cc-42d0-b548-8d8a5d268c5b.jpg" class="home_team_picture style=" width="80" height="80" ;> </a></span></center>
+                            </td>                            
                             <!-- <td width=150>
                                 <center> <span><b>ImageNet21k+CC15M</b></span></center>
                             </td> -->
@@ -295,18 +301,20 @@
                             </td> -->
                         </tr>
                         <tr>
-                            <td width=150>
+                            <td width=100>
                                 <center> <span><b>ODinW</b></span></center>
                             </td>
                             <td width=150>
                                 <center> <span><b>35 Object Detection Datasets</b></span></center>
                             </td>
-                            <td width=150>
-                                <center> <span><b>Averaged scores in zero, few, full-shot settings</b></span></center>
+                            <td width=100>
+                                <center> <span><b>Zero, few, full-shot</b></span></center>
                             </td>
-                            <!-- <td width=150>
-                                <center> <span><b>Objects365+CC15M</b></span></center>
-                            </td> -->
+                            <td width=150>
+                            	<center> <span><b>Open Soon</b></span></center>
+                            	
+<!--                                 <center> <span><a href="https://eval.ai/web/challenges/challenge-page/1832/overview"> <img src="https://evalai.s3.amazonaws.com/media/logos/0edb5d9a-27cc-42d0-b548-8d8a5d268c5b.jpg" class="home_team_picture style=" width="75" height="75" ;> </a></span></center> -->
+                            </td>    
                         </tr>
                         <!-- <tr>
                             <td width=150>
@@ -338,7 +346,7 @@
                     More information about the challenges are released: 
                     <a href="https://computer-vision-in-the-wild.github.io/ELEVATER/"> [Benchmark] </a>
                      <a href="https://arxiv.org/abs/2204.08790"> [Document] </a>.
-                          Our evaluation server will be online at late July, 2022.
+                          Our evaluation server will be online soon.
                     <br><br>
 
                 </p>
