--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                 </li>            
 
                 <br>
-                We accept abstract submissions to our workshop. All submissions shall have maximally 8 pages (excluding references) following the ECCV 2022 author guidelines. All submissions will be reviewed by the Program Committee on the basis of technical quality, relevance to scope of the conference, originality, significance, and clarity.
+                We accept abstract submissions to our workshop. All submissions shall have maximally 8 pages (excluding references) following the ECCV 2022 author guidelines. All submissions will be reviewed by the Program Committee on the basis of technical quality, relevance to scope of the conference, originality, significance, and clarity. Ther review process is double-blind, and the accepted papers are non-archived in ECCV procedding.
                 <br><br>
                 Submission Portal: <a href="https://cmt3.research.microsoft.com/CVinW2022"> [CMT] </a>
                 <br><br>
@@ -339,7 +339,9 @@
                     
 
                     <li style="margin-left:30px">
-                        For the industry track, there is no limitation on pre-training data and model size. Teams are required to disclose meta info of model and data if extra data is used.
+                        For the industry track, there is no limitation on pre-training data and model size. Teams are required to disclose meta info of model and data if extra data is used. Here are some publicly available image-text datasets: (1) FLAVA <a href="https://huggingface.co/datasets/facebook/pmd">Public Multimodal Datasets (PMD)</a> corpus with 70M pairs; (2) <a href="https://laion.ai/projects/">LAION</a> 400M or 5B.
+
+
                     </li>
 
                     <br>
