--- a/index.html
+++ b/index.html
@@ -1181,7 +1181,7 @@
 </div>
 <!-- Challenge Organizers -->
 <div class="row">
-    <h1 style="font-size:30px; color:grey; font-weight: 200">Challenge Organizers (TBD)</h1>
+    <h1 style="font-size:30px; color:grey; font-weight: 200">Challenge Organizers</h1>
     <div class="team" id="people">
         <div class="row">
             <div class="large-1 columns">
