--- a/index.html
+++ b/index.html
@@ -1287,6 +1287,46 @@
                         <br>Google</p> -->
                 </div>
         </div>
+        <div class="row">
+            <div class="large-1 columns">
+                <a href="https://apsdehal.in/"><img src="https://apsdehal.in/assets/img/pic.jpeg" target="_blank" class="home_team_picture style=" width="75" height="75" ;>
+                    <br><br>
+                </a>
+                <p style="font-size:12px; font-weight: 200;">Amanpreet Singh
+                    <br>HuggingFace</p>
+            </div>
+            <div class="large-1 columns">
+            </div>
+            <div class="large-1 columns">
+            </div>
+
+            <div class="large-1 columns">
+                </div>
+            <div class="large-1 columns">
+            </div>
+            <div class="large-1 columns">
+            </div>
+            <div class="large-1 columns">
+            </div>
+            <div class="large-1 columns">
+            </div>
+            <div class="large-1 columns">
+            </div>
+            <div class="large-1 columns">
+            </div>  
+                <div class="large-1 columns">
+                </div>
+                 <div class="large-1 columns">
+                </div>
+                <!--
+                <div class="large-1 columns">
+                    <a href="https://chunliangli.github.io"><img src="https://media-exp1.licdn.com/dms/image/C4E03AQG3kOloptyXaw/profile-displayphoto-shrink_400_400/0/1516885291151?e=1663804800&v=beta&t=7tGy9QRO0P55ntCKTHha72WtJQQ2CWHk2gh0Usa9c-I" class="home_team_picture style=" width="75" height="75" ;>
+                        <br><br>
+                    </a>
+                    <p style="font-size:12px; font-weight: 200;">Chun-Liang Li
+                        <br>Google</p> -->
+                </div>
+        </div>        
     <hr>    
 </div>
 
