--- a/index.html
+++ b/index.html
@@ -1287,6 +1287,7 @@
                         <br>Google</p> -->
                 </div>
         </div>
+    <div class="team" id="people">
         <div class="row">
             <div class="large-1 columns">
                 <a href="https://apsdehal.in/"><img src="https://apsdehal.in/assets/img/pic.jpeg" target="_blank" class="home_team_picture style=" width="75" height="75" ;>
@@ -1326,7 +1327,8 @@
                     <p style="font-size:12px; font-weight: 200;">Chun-Liang Li
                         <br>Google</p> -->
                 </div>
-        </div>        
+        </div>    
+    </div>          
     <hr>    
 </div>
 
