add Xiaojie, Jiashi and Han

--- a/index.html
+++ b/index.html
@@ -1297,11 +1297,25 @@
                     <br>HuggingFace</p>
             </div>
             <div class="large-1 columns">
+                <a href="https://scholar.google.com.sg/citations?user=OEZ816YAAAAJ&hl=en"><img src="https://scholar.googleusercontent.com/citations?view_op=medium_photo&user=OEZ816YAAAAJ&citpid=2" class="home_team_picture style=" width="75" height="75" ;>
+                        <br><br>
+                    </a>
+                    <p style="font-size:12px; font-weight: 200;">Xiaojie Jin
+                        <br>Bytedance</p>
             </div>
             <div class="large-1 columns">
+                <a href="https://sites.google.com/site/jshfeng/"><img src="https://scholar.googleusercontent.com/citations?view_op=medium_photo&user=Q8iay0gAAAAJ&citpid=6" class="home_team_picture style=" width="75" height="75" ;>
+                        <br><br>
+                    </a>
+                    <p style="font-size:12px; font-weight: 200;">Jiashi Feng
+                        <br>Bytedance</p>
             </div>
-
             <div class="large-1 columns">
+                <a href="https://ancientmooner.github.io/"><img src="https://ancientmooner.github.io/assets/media/profile.jpg" class="home_team_picture style=" width="75" height="75" ;>
+                        <br><br>
+                    </a>
+                    <p style="font-size:12px; font-weight: 200;">Han Hu
+                        <br>MSRA</p>
                 </div>
             <div class="large-1 columns">
             </div>
