--- a/index.html
+++ b/index.html
@@ -311,9 +311,9 @@
                                 <center> <span><b>Zero, few, full-shot</b></span></center>
                             </td>
                             <td width=150>
-                            	<center> <span><b>Open Soon</b></span></center>
-                            	
-<!--                                 <center> <span><a href="https://eval.ai/web/challenges/challenge-page/1832/overview"> <img src="https://evalai.s3.amazonaws.com/media/logos/0edb5d9a-27cc-42d0-b548-8d8a5d268c5b.jpg" class="home_team_picture style=" width="75" height="75" ;> </a></span></center> -->
+                                <center> <span><a href="https://eval.ai/web/challenges/challenge-page/1839/overview"> <img src="https://evalai.s3.amazonaws.com/media/logos/b8a06ae4-2172-43ae-b65f-64c6139d807c.jpg" class="home_team_picture style=" width="80" height="80" ;> </a></span></center>
+
+
                             </td>    
                         </tr>
                         <!-- <tr>
@@ -348,7 +348,7 @@
                     Please see the submission pages for detailed requirements in each Challenge -> Track -> Phase. More information about the challenge benchmark is released: 
                     <a href="https://computer-vision-in-the-wild.github.io/ELEVATER/"> [Benchmark] </a>
                      <a href="https://arxiv.org/abs/2204.08790"> [Document]</a>.
-                          Our evaluation server for object detection will be online soon.
+                    Please reach out if you have any issue in submissions.
                     <br><br>
 
                 </p>
@@ -369,7 +369,7 @@
                                 <span style="display:inline-block; margin-left:10px;">Competition starts, testing phase begins</span><br>
 
                                 <span style="width:40%; margin:5px; display:inline-block;">
-                                    September 30, 2022
+                                    October 7, 2022
                                 </span>
                                 <span style="display:inline-block; margin-left:10px;">Competition ends (challenge paper submission)</span><br>
 
