--- a/index.html
+++ b/index.html
@@ -1175,6 +1175,13 @@
                     <p style="font-size:12px; font-weight: 200;">Shohei Ono 
                         <br>Microsoft</p>
                 </div> 
+                <div class="large-1 columns">
+                    <a href="https://ashkamath.github.io/"><img src="./static/eccv2022/img/aishwarya_k.jpg" class="home_team_picture style=" width="75" height="75" ;>
+                        <br><br>
+                    </a>
+                    <p style="font-size:12px; font-weight: 200;">Aishwarya Kamath
+                        <br>NYU</p>
+                </div> 
         <!-- </div> -->
     <hr>
 </div>
@@ -1317,6 +1324,13 @@
                     <p style="font-size:12px; font-weight: 200;">Han Hu
                         <br>MSRA</p>
                 </div>
+                <div class="large-1 columns">
+                    <a href="https://www.sainingxie.com/"><img src="./static/eccv2022/img/saining.png" class="home_team_picture style=" width="75" height="75" ;>
+                            <br><br>
+                        </a>
+                        <p style="font-size:12px; font-weight: 200;">Saining Xie
+                            <br>NYU/Meta</p>
+                    </div>
             <div class="large-1 columns">
             </div>
             <div class="large-1 columns">
