--- a/index.html
+++ b/index.html
@@ -1283,7 +1283,7 @@
                         <br><br>
                     </a>
                     <p style="font-size:12px; font-weight: 200;">Houwen Peng
-                        <br>MSRA</p>
+                        <br>Microsoft</p>
                 </div>
                 <!--
                 <div class="large-1 columns">
@@ -1297,32 +1297,32 @@
     <div class="team" id="people">
         <div class="row">
             <div class="large-1 columns">
-                <a href="https://apsdehal.in/"><img src="https://apsdehal.in/assets/img/pic.jpeg" target="_blank" class="home_team_picture style=" width="75" height="75" ;>
+                <a href="https://apsdehal.in/"><img src="./static/eccv2022/img/aman.jpeg" target="_blank" class="home_team_picture style=" width="75" height="75" ;>
                     <br><br>
                 </a>
                 <p style="font-size:12px; font-weight: 200;">Amanpreet Singh
                     <br>HuggingFace</p>
             </div>
             <div class="large-1 columns">
-                <a href="https://scholar.google.com.sg/citations?user=OEZ816YAAAAJ&hl=en"><img src="https://scholar.googleusercontent.com/citations?view_op=medium_photo&user=OEZ816YAAAAJ&citpid=2" class="home_team_picture style=" width="75" height="75" ;>
+                <a href="https://scholar.google.com.sg/citations?user=OEZ816YAAAAJ&hl=en"><img src="./static/eccv2022/img/xiaojie_jin.jpeg" class="home_team_picture style=" width="75" height="75" ;>
                         <br><br>
                     </a>
                     <p style="font-size:12px; font-weight: 200;">Xiaojie Jin
                         <br>Bytedance</p>
             </div>
             <div class="large-1 columns">
-                <a href="https://sites.google.com/site/jshfeng/"><img src="https://scholar.googleusercontent.com/citations?view_op=medium_photo&user=Q8iay0gAAAAJ&citpid=6" class="home_team_picture style=" width="75" height="75" ;>
+                <a href="https://sites.google.com/site/jshfeng/"><img src="./static/eccv2022/img/jiashi_feng.jpeg" class="home_team_picture style=" width="75" height="75" ;>
                         <br><br>
                     </a>
                     <p style="font-size:12px; font-weight: 200;">Jiashi Feng
                         <br>Bytedance</p>
             </div>
             <div class="large-1 columns">
-                <a href="https://ancientmooner.github.io/"><img src="https://ancientmooner.github.io/assets/media/profile.jpg" class="home_team_picture style=" width="75" height="75" ;>
+                <a href="https://ancientmooner.github.io/"><img src="./static/eccv2022/img/han_hu.jpeg" class="home_team_picture style=" width="75" height="75" ;>
                         <br><br>
                     </a>
                     <p style="font-size:12px; font-weight: 200;">Han Hu
-                        <br>MSRA</p>
+                        <br>Microsoft</p>
                 </div>
                 <div class="large-1 columns">
                     <a href="https://www.sainingxie.com/"><img src="./static/eccv2022/img/saining.png" class="home_team_picture style=" width="75" height="75" ;>
@@ -1330,7 +1330,14 @@
                         </a>
                         <p style="font-size:12px; font-weight: 200;">Saining Xie
                             <br>NYU/Meta</p>
-                    </div>
+                </div>
+                <div class="large-1 columns">
+                    <a href="https://nguyenbh.github.io/"><img src="https://nguyenbh.github.io/authors/admin/avatar_huaf86694975fe5beecb493d38fc677dd1_22672_270x270_fill_q90_lanczos_center.jpg" class="home_team_picture style=" width="75" height="75" ;>
+                            <br><br>
+                        </a>
+                        <p style="font-size:12px; font-weight: 200;">Nguyen Bach
+                            <br>Microsoft</p>
+                </div>
             <div class="large-1 columns">
             </div>
             <div class="large-1 columns">
