--- a/index.html
+++ b/index.html
@@ -1338,6 +1338,13 @@
                         <p style="font-size:12px; font-weight: 200;">Nguyen Bach
                             <br>Microsoft</p>
                 </div>
+                <div class="large-1 columns">
+                    <a href="https://sites.google.com/site/junnanlics/"><img src="./static/eccv2022/img/junnan_li.jpeg" class="home_team_picture style=" width="75" height="75" ;>
+                            <br><br>
+                        </a>
+                        <p style="font-size:12px; font-weight: 200;">Junnan Li
+                            <br>Salesforce</p>
+                </div>                
             <div class="large-1 columns">
             </div>
             <div class="large-1 columns">
