--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                                 </span>
                                 <span style="display:inline-block; margin-left:10px;">Competition ends (challenge paper submission)</span><br>
 
-                                <span style="width:40%; margin:5px; display:inline-block;">September 16, 2022</span>
+                                <span style="width:40%; margin:5px; display:inline-block;"><del>September 16, 2022</del> Extended: September 30, 2022</span>
                                 <span style="display:inline-block; margin-left:10px;">Workshop paper submission deadline</span><br>
 
                                 <span style="width:40%; margin:5px; display:inline-block;">October 9,2022</span>
