--- a/index.html
+++ b/index.html
@@ -1188,7 +1188,7 @@
             </div>
 
              <div class="large-1 columns">
-                <a href="https://scholar.google.com/citations?hl=zh-CN&user=1vz0kKUAAAAJ&view_op=list_works&sortby=pubdate"><img src="https://media-exp1.licdn.com/dms/image/C5603AQHrGMQQiwJC7w/profile-displayphoto-shrink_400_400/0/1561582656147?e=1663804800&v=beta&t=j7gTbLwYa8oNcpZecCUW841a3Z7J7Ogd0XyTL0qAYYA" class="home_team_picture style=" width="75" height="75" ;>
+                <a href="https://scholar.google.com/citations?hl=zh-CN&user=1vz0kKUAAAAJ&view_op=list_works&sortby=pubdate"><img src="./static/eccv2022/img/haotian_zhang.jpeg" class="home_team_picture style=" width="75" height="75" ;>
                     <br><br>
                 </a>
                 <p style="font-size:12px; font-weight: 200;">Haotian Zhang  
@@ -1222,7 +1222,7 @@
     <div class="team" id="people">
         <div class="row">
             <div class="large-1 columns">
-                <a href="https://sites.google.com/site/yinfeiyang"><img src="https://media-exp1.licdn.com/dms/image/C5603AQHW7bZV8zHTOg/profile-displayphoto-shrink_400_400/0/1516627614880?e=1663804800&v=beta&t=ds7yiDBs7Y6QnPh3WdYs3Ld_DElsqg4hyntWaFjvQGE" target="_blank" class="home_team_picture style=" width="75" height="75" ;>
+                <a href="https://sites.google.com/site/yinfeiyang"><img src="./static/eccv2022/img/yinfei_yang.jpeg" target="_blank" class="home_team_picture style=" width="75" height="75" ;>
                     <br><br>
                 </a>
                 <p style="font-size:12px; font-weight: 200;">Yinfei Yang 
@@ -1236,7 +1236,7 @@
                     <br>Waymo</p>
             </div> -->
             <div class="large-1 columns">
-                <a href="https://www.linkedin.com/in/yi-ting-chen-google/ "><img src="https://media-exp1.licdn.com/dms/image/C5603AQEVUanerXnP6Q/profile-displayphoto-shrink_400_400/0/1655777497160?e=1663804800&v=beta&t=rUyQTbYbJsDX65VFP7LgVlr63TG_TkgA4fW0ZtHrkeA" class="home_team_picture style=" width="75" height="75" ;>
+                <a href="https://www.linkedin.com/in/yi-ting-chen-google/ "><img src="./static/eccv2022/img/yiting_chen.jpeg" class="home_team_picture style=" width="75" height="75" ;>
                     <br><br>
                 </a>
                 <p style="font-size:12px; font-weight: 200;">Yi-Ting Chen 
@@ -1258,7 +1258,7 @@
                     <br>Sensetime</p>
                 </div>
             <div class="large-1 columns">
-                    <a href="https://jeff-liangf.github.io"><img src="https://media-exp1.licdn.com/dms/image/C5603AQEMlx42TO8RFw/profile-displayphoto-shrink_400_400/0/1618561979511?e=1663804800&v=beta&t=MTMEQbrytIkkvxrMD87gpbNo4o0wNir_5Xu7_Bs9jxk" class="home_team_picture style=" width="75" height="75" ;>
+                    <a href="https://jeff-liangf.github.io"><img src="./static/eccv2022/img/feng_liang.jpeg" class="home_team_picture style=" width="75" height="75" ;>
                         <br><br>
                     </a>
                     <p style="font-size:12px; font-weight: 200;">Feng Liang 
