--- a/index.html
+++ b/index.html
@@ -201,8 +201,11 @@
                 <a href="https://arxiv.org/abs/2104.13921"> ViLD </a>, <a href="https://arxiv.org/abs/2112.09106"> RegionCLIP </a> and <a href="https://arxiv.org/abs/2112.03857"> GLIP </a> for object detection.  
                 These vision models with language interface are naturally open-vocabulary recogntion models, showing superior zero-shot and few-shot adaption performance on various real-world scenarios. 
                 <br><br>
-                We propose this "Computer Vision in the Wild" workshop, aiming to gather academic and industry communities to work on CV problems in real-world scenarios, focusing on the challenge of open-set/domain visual recognition and efficient task-level transfer. 
-                Since there is no established benchmarks to measure the progress of "CV in the Wild", we develop new benchmarks for image classification and object detection, to measure the task-level transfer ablity of various models/methods over diverse real-world datasets, in terms of both prediction accuracy and adaption efficiency. This workshop will also host two challenges based on the <a href="https://computer-vision-in-the-wild.github.io/ELEVATER/">benchmarks</a>.
+                We propose this "Computer Vision in the Wild (CVinW)" workshop, aiming to gather academic and industry communities to work on CV problems in real-world scenarios, focusing on the challenge of open-set/domain visual recognition and efficient task-level transfer. 
+                Since there is no established benchmarks to measure the progress of "CV in the Wild", we develop new benchmarks for image classification and object detection, to measure the task-level transfer ablity of various models/methods over diverse real-world datasets, in terms of both prediction accuracy and adaption efficiency. This workshop will also host two challenges based on the <a href="https://computer-vision-in-the-wild.github.io/ELEVATER/">ELEVATER benchmarks</a>.
+                <br><br>
+                For those who are new to this topic, please check our the  <a href="https://github.com/Computer-Vision-in-the-Wild/CVinW_Readings/blob/main/README.md">CVinW Reading List</a>.
+
                 </p>
             </div>
         </div>
@@ -1228,13 +1231,6 @@
                 <p style="font-size:12px; font-weight: 200;">Yinfei Yang 
                     <br>Apple</p>
             </div>
-            <!-- <div class="large-1 columns">
-                <a href="https://www.linkedin.com/in/chao-jia-6157ba14/ "><img src="https://scholar.googleusercontent.com/citations?view_op=medium_photo&user=VCgDrQsAAAAJ&citpid=3" class="home_team_picture style=" width="75" height="75" ;>
-                    <br><br>
-                </a>
-                <p style="font-size:12px; font-weight: 200;">Chao Jia
-                    <br>Waymo</p>
-            </div> -->
             <div class="large-1 columns">
                 <a href="https://www.linkedin.com/in/yi-ting-chen-google/ "><img src="./static/eccv2022/img/yiting_chen.jpeg" class="home_team_picture style=" width="75" height="75" ;>
                     <br><br>
@@ -1256,7 +1252,7 @@
                 </a>
                 <p style="font-size:12px; font-weight: 200;">Yangguang Li 
                     <br>Sensetime</p>
-                </div>
+            </div>
             <div class="large-1 columns">
                     <a href="https://jeff-liangf.github.io"><img src="./static/eccv2022/img/feng_liang.jpeg" class="home_team_picture style=" width="75" height="75" ;>
                         <br><br>
@@ -1292,67 +1288,24 @@
                 <p style="font-size:12px; font-weight: 200;">Houwen Peng
                     <br>Microsoft</p>
             </div> 
-
-                <div class="large-1 columns">
-                    <a href="https://www.sainingxie.com/"><img src="./static/eccv2022/img/saining.png" class="home_team_picture style=" width="75" height="75" ;>
-                            <br><br>
-                        </a>
-                        <p style="font-size:12px; font-weight: 200;">Saining Xie
-                            <br>NYU/Meta</p>
-                </div>
-                    
             <div class="large-1 columns">
-            </div>
-            <div class="large-1 columns">
-            </div>
-
-<!--             <div class="large-1 columns">
-                <a href="https://ksaito-ut.github.io/ "><img src="https://ksaito-ut.github.io/images/image_ksaito.jpeg " target="_blank" class="home_team_picture style=" width="75" height="75" ;>
-                    <br><br>
-                </a>
-                <p style="font-size:12px; font-weight: 200;">Kunaiki Saito 
-                    <br>Google</p>
-            </div>
-            <div class="large-1 columns">
-                <a href="https://sites.google.com/site/kihyuksml/ "><img src="./static/eccv2022/img/KihyukSohn.jpeg" class="home_team_picture style=" width="75" height="75" ;>
-                    <br><br>
-                </a>
-                <p style="font-size:12px; font-weight: 200;">Kihyuk Sohn 
-                    <br>Google</p>
-            </div>
-            <div class="large-1 columns">
-                <a href="https://www.linkedin.com/in/zhangxiangxiao/ "><img src="https://media-exp1.licdn.com/dms/image/C5603AQEq333rtuTR_g/profile-displayphoto-shrink_400_400/0/1517520796402?e=1663804800&v=beta&t=pBCemT-zu6y6YzXnKkPTnjMJYvrUJ5izmyH6mGhNC1o" class="home_team_picture style=" width="75" height="75" ;>
-                    <br><br>
-                </a>
-                <p style="font-size:12px; font-weight: 200;">Xiang Zhang 
-                    <br>Google</p>
-            </div>
-            <div class="large-1 columns">
-                <a href="https://chunliangli.github.io"><img src="https://media-exp1.licdn.com/dms/image/C4E03AQG3kOloptyXaw/profile-displayphoto-shrink_400_400/0/1516885291151?e=1663804800&v=beta&t=7tGy9QRO0P55ntCKTHha72WtJQQ2CWHk2gh0Usa9c-I" class="home_team_picture style=" width="75" height="75" ;>
-                    <br><br>
-                </a>
-                <p style="font-size:12px; font-weight: 200;">Chun-Liang Li
-                    <br>Google</p>
-            </div>  
-
-                <div class="large-1 columns">
-                    <a href="https://chl260.github.io/"><img src="https://media-exp1.licdn.com/dms/image/C5603AQGFEybThH2fnQ/profile-displayphoto-shrink_400_400/0/1518764142934?e=1663804800&v=beta&t=3Ayn4myRNADLf1a0R2hKSP3QfhL8FDyELJvHsfxyKc4 " class="home_team_picture style=" width="75" height="75" ;>
+                <a href="https://www.sainingxie.com/"><img src="./static/eccv2022/img/saining.png" class="home_team_picture style=" width="75" height="75" ;>
                         <br><br>
                     </a>
-                    <p style="font-size:12px; font-weight: 200;">Chen-Yu Lee 
-                        <br>Google</p>
-                </div> -->
-
-                <!--
-                <div class="large-1 columns">
-                    <a href="https://chunliangli.github.io"><img src="https://media-exp1.licdn.com/dms/image/C4E03AQG3kOloptyXaw/profile-displayphoto-shrink_400_400/0/1516885291151?e=1663804800&v=beta&t=7tGy9QRO0P55ntCKTHha72WtJQQ2CWHk2gh0Usa9c-I" class="home_team_picture style=" width="75" height="75" ;>
+                    <p style="font-size:12px; font-weight: 200;">Saining Xie
+                        <br>NYU/Meta</p>
+            </div>
+            <div class="large-1 columns">
+                <a href="https://ancientmooner.github.io/"><img src="./static/eccv2022/img/han_hu.jpeg" class="home_team_picture style=" width="75" height="75" ;>
                         <br><br>
                     </a>
-                    <p style="font-size:12px; font-weight: 200;">Chun-Liang Li
-                        <br>Google</p> -->
-                </div>
+                    <p style="font-size:12px; font-weight: 200;">Han Hu
+                        <br>Microsoft</p>
+            </div>
+            <div class="large-1 columns">
+            </div>            
         </div>
-    <div class="team" id="people">
+
         <div class="row">
             <div class="large-1 columns">
                 <a href="https://apsdehal.in/"><img src="./static/eccv2022/img/aman.jpeg" target="_blank" class="home_team_picture style=" width="75" height="75" ;>
@@ -1414,33 +1367,90 @@
                         <br>Salesforce</p>
             </div>    
 
+
             <div class="large-1 columns">
-                <a href="https://ancientmooner.github.io/"><img src="./static/eccv2022/img/han_hu.jpeg" class="home_team_picture style=" width="75" height="75" ;>
+                <a href="https://zhangyuanhan-ai.github.io/"><img src="./static/eccv2022/img/yuanhan_zhang.png" class="home_team_picture style=" width="75" height="75" ;>
                         <br><br>
                     </a>
-                    <p style="font-size:12px; font-weight: 200;">Han Hu
-                        <br>Microsoft</p>
+                    <p style="font-size:12px; font-weight: 200;">Yuanhan Zhang
+                        <br>NTU</p>
+                </div>            
+
+            <div class="large-1 columns">
+                <a href="https://kaiyangzhou.github.io/"><img src="https://kaiyangzhou.github.io/images/ky.png" class="home_team_picture style=" width="75" height="75" ;>
+                        <br><br>
+                    </a>
+                    <p style="font-size:12px; font-weight: 200;">Kaiyang Zhou
+                        <br>NTU</p>
                 </div>
 
+            <div class="large-1 columns">
+                <a href="https://liuziwei7.github.io/"><img src="./static/eccv2022/img/ziwei_liu.png" class="home_team_picture style=" width="75" height="75" ;>
+                        <br><br>
+                    </a>
+                    <p style="font-size:12px; font-weight: 200;">Ziwei Liu
+                        <br>NTU</p>
+            </div>
+
+            <div class="large-1 columns">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="large-1 columns">
+                <a href="https://www.lsl.zone/"><img src="./static/eccv2022/img/shilong_liu.jpeg" target="_blank" class="home_team_picture style=" width="75" height="75" ;>
+                    <br><br>
+                </a>
+                <p style="font-size:12px; font-weight: 200;">Shilong Liu
+                    <br>Tsinghua University</p>
+            </div>
+            <div class="large-1 columns">
+                <a href="https://fengli-ust.github.io/"><img src="./static/eccv2022/img/feng_li.jpeg" class="home_team_picture style=" width="75" height="75" ;>
+                        <br><br>
+                    </a>
+                    <p style="font-size:12px; font-weight: 200;">Feng Li
+                        <br>HKUST</p>
+            </div>
+            <div class="large-1 columns">
+                <a href="https://scholar.google.com/citations?user=B8hPxMQAAAAJ&hl=zh-CN"><img src="./static/eccv2022/img/hao_zhang.jpeg" class="home_team_picture style=" width="75" height="75" ;>
+                        <br><br>
+                    </a>
+                    <p style="font-size:12px; font-weight: 200;">Hao Zhang
+                        <br>HKUST</p>
+            </div>
+            <div class="large-1 columns">
+            </div>
+              
+            <div class="large-1 columns">
+            </div>
+
+            <div class="large-1 columns">
+            </div>
 
             <div class="large-1 columns">
             </div>
             <div class="large-1 columns">
-            </div>  
-                <div class="large-1 columns">
-                </div>
-                 <div class="large-1 columns">
-                </div>
-                <!--
-                <div class="large-1 columns">
-                    <a href="https://chunliangli.github.io"><img src="https://media-exp1.licdn.com/dms/image/C4E03AQG3kOloptyXaw/profile-displayphoto-shrink_400_400/0/1516885291151?e=1663804800&v=beta&t=7tGy9QRO0P55ntCKTHha72WtJQQ2CWHk2gh0Usa9c-I" class="home_team_picture style=" width="75" height="75" ;>
-                        <br><br>
-                    </a>
-                    <p style="font-size:12px; font-weight: 200;">Chun-Liang Li
-                        <br>Google</p> -->
-                </div>
-        </div>    
-    </div>          
+            </div>    
+
+
+            <div class="large-1 columns">
+            </div>            
+
+            <div class="large-1 columns">
+            </div>
+
+            <div class="large-1 columns">
+            </div>
+
+            <div class="large-1 columns">
+            </div>
+        </div>
+
+        </div>  
+
+    </div>      
+
+
     <hr>    
 </div>
 
@@ -1522,6 +1532,13 @@
                     <br>UCSD</p>
             </div>  
             <div class="large-1 columns">
+                <a href="https://www.microsoft.com/en-us/research/people/jfgao/"><img src="https://www.microsoft.com/en-us/research/uploads/prod/2020/09/20191101_170350330_iOS-4.jpg" class="home_team_picture style=" width="75" height="75" ;>
+                    <br><br>
+                </a>
+                <p style="font-size:12px; font-weight: 200;">Jianfeng Gao
+                    <br>Microsoft</p>
+            </div>                
+            <div class="large-1 columns">
             </div>
         </div>
 
@@ -1534,14 +1551,7 @@
                 </a>
                 <p style="font-size:12px; font-weight: 200;">Jenq-Neng Hwang
                     <br>University of Washington</p>
-            </div>
-            <div class="large-1 columns">
-                <a href="https://www.microsoft.com/en-us/research/people/jfgao/"><img src="https://www.microsoft.com/en-us/research/uploads/prod/2020/09/20191101_170350330_iOS-4.jpg" class="home_team_picture style=" width="75" height="75" ;>
-                    <br><br>
-                </a>
-                <p style="font-size:12px; font-weight: 200;">Jianfeng Gao
-                    <br>Microsoft</p>
-            </div>    
+            </div>  
             <div class="large-1 columns">
                 <a href="https://scholar.google.com/citations?user=WLN3QrAAAAAJ&hl=en"><img src="./static/eccv2022/img/lecun.jpeg" class="home_team_picture style=" width="75" height="75" ;>
                     <br><br>
