--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                 There are two challenges associated with this workshop: "Image Classification in the Wild" (ICinW) and "Object Detection in the Wild" (ODinW). We summarize their evaluation datasets and metrics in the table below.<br><br>
                     <table width="85%">
                         <tr>
-                            <td width=50>
+                            <td width=30>
                                 <center> <span style="color:gray;"><b>Challenge</b></span> <br>
                                     <!-- Recording: <a target="_blank" href="https://youtu.be/L-86t1AW3z4">[Video]</a> </center> -->
                             </td>
@@ -298,17 +298,18 @@
                             <td width=100>
                                 <center> <span style="color:gray;"><b>Eval Metrics</b></span> <br>
                             </td>
+                            <td width=100>
+                                <center> <span style="color:gray;"><b>Instructions</b></span> <br>
+                            </td>                            
                             <td width=150>
                                 <center> <span style="color:black;"><b>Make a Challenge Submission</b>
                                     <a href="https://www.springer.com/journal/11263/updates/23503548"> <img src="./static/eccv2022/img/icons/icon_live.png" class=" style=" width="50" height="40" ;> </a>
                                 </span> <br>
                             </td>                            
-                            <!-- <td width=150>
-                                <center> <span style="color:gray;"><b>Pretraining data*</b></span> <br>
-                            </td> -->
+ 
                         </tr>
                         <tr>
-                            <td width=100>
+                            <td width=30>
                                 <center> <span><b>ICinW</b></span></center>
                             </td>
                             <td width=150>
@@ -317,9 +318,12 @@
                             <td width=100>
                                 <center> <span><b>Zero, few, full-shot</b></span></center>
                             </td>
+                            <td width=100>
+                                <center> <span><a href="https://github.com/Computer-Vision-in-the-Wild/Elevater_Toolkit_IC"> <img src="./static/eccv2022/img/icons/instruction.png" class="style=" width="50" height="50" ;> </a></span></center>
+                            </td>     
                             <td width=150>
                                 <center> <span><a href="https://eval.ai/web/challenges/challenge-page/1832/overview"> <img src="https://evalai.s3.amazonaws.com/media/logos/0edb5d9a-27cc-42d0-b548-8d8a5d268c5b.jpg" class="home_team_picture style=" width="100" height="100" ;> </a></span></center>
-                            </td>                            
+                            </td>                                                        
                             <!-- <td width=150>
                                 <center> <span><b>ImageNet21k+CC15M</b></span></center>
                             </td> -->
@@ -335,7 +339,7 @@
                             </td> -->
                         </tr>
                         <tr>
-                            <td width=100>
+                            <td width=30>
                                 <center> <span><b>ODinW</b></span></center>
                             </td>
                             <td width=150>
@@ -344,11 +348,12 @@
                             <td width=100>
                                 <center> <span><b>Zero, few, full-shot</b></span></center>
                             </td>
+                            <td width=100>
+                                <center> <span><a href="https://github.com/microsoft/GLIP#the-object-detection-in-the-wild-benchmark"> <img src="./static/eccv2022/img/icons/instruction.png" class=" style=" width="50" height="50" ;> </a></span></center>
+                            </td>  
                             <td width=150>
                                 <center> <span><a href="https://eval.ai/web/challenges/challenge-page/1839/overview"> <img src="https://evalai.s3.amazonaws.com/media/logos/b8a06ae4-2172-43ae-b65f-64c6139d807c.jpg" class="home_team_picture style=" width="100" height="100" ;> </a></span></center>
-
-
-                            </td>    
+                            </td>  
                         </tr>
                         <!-- <tr>
                             <td width=150>
@@ -386,7 +391,8 @@
                     <br>
                     Please see the submission pages for detailed requirements in each Challenge -> Track -> Phase. More information about the challenge benchmark is released: 
                     <a href="https://computer-vision-in-the-wild.github.io/ELEVATER/"> [Benchmark] </a>
-                     <a href="https://arxiv.org/abs/2204.08790"> [Document]</a>.
+                    <a href="https://arxiv.org/abs/2204.08790"> [Document]</a>
+                     <a href="https://github.com/Computer-Vision-in-the-Wild/DataDownload"> [Data Download]</a>.
                     Please reach out if you have any issue in submissions.
                     <br><br>
 
